Try to implement pager

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -198,3 +198,11 @@ site.header.menu.rating=Rating
 site.header.menu.store=Store
 site.header.menu.twitter=Twitter
 site.header.menu.telegram=Telegram
+site.pager.pages=Pages:
+site.pager.page=Page
+site.pager.right=>
+site.pager.left=<
+site.pager.right.last=>>
+site.pager.left.first=<<
+site.pager.ok=OK
+site.pager.placeholder=#
