--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -198,3 +198,11 @@ site.header.menu.rating=Рейтинг
 site.header.menu.store=Магазин
 site.header.menu.twitter=Twitter
 site.header.menu.telegram=Telegram
+site.pager.pages=Страниц:
+site.pager.page=Страница
+site.pager.right=>
+site.pager.left=<
+site.pager.right.last=>>
+site.pager.left.first=<<
+site.pager.ok=OK
+site.pager.placeholder=№
