Improve header menu

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -189,15 +189,17 @@ site.footer.copyright=\
 © <a href="//exlmoto.ru" target="_blank" title="EXL's Developer Blog.">EXL</a>, 2015-%date%. \
 Telegram: <a href="//t.me/exlmoto" target="_blank" title="@exlmoto in Telegram.">@exlmoto</a>.
 site.header.logo.tooltip=MotoFan.Ru group news, last page.
-site.header.menu.site=Site
-site.header.menu.wiki=MotoWiki
-site.header.menu.search=Search
-site.header.menu.members=Members
-site.header.menu.rules=Forum Rules
-site.header.menu.rating=Rating
-site.header.menu.store=Store
-site.header.menu.twitter=Twitter
-site.header.menu.telegram=Telegram
+site.header.menu=\
+&bull; <a href="//motofan.ru" target="_blank">Site</a> \
+&bull; <a href="//wiki.motofan.ru" target="_blank">MotoWiki</a> \
+&bull; <a href="//forum.motofan.ru/index.php?act=Search&amp;f=" target="_blank">Search</a> \
+&bull; <a href="//forum.motofan.ru/index.php?act=Members" target="_blank">Members</a> \
+&bull; <a href='//forum.motofan.ru/index.php?act=announce&amp;f=70&amp;id=17' target="_blank">Forum Rules</a> \
+&bull; <a href="//forum.motofan.ru/index.php?act=rating&amp;CODE=show" target="_blank" >Rating</a> \
+&bull; <a href="//forum.motofan.ru/index.php?showforum=12" target="_blank">Store</a> \
+&bull; <a href="//twitter.com/MotoFanRu" target="_blank">Twitter</a> \
+&bull; <a class="telegram-link" href="//t.me/motofan_ru" target="_blank">Telegram</a> \
+&bull;
 site.pager.pages=Pages:
 site.pager.page=Page
 site.pager.right=>
