--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -189,15 +189,17 @@ site.footer.copyright=\
 © <a href="//exlmoto.ru" target="_blank" title="EXL's Developer Blog.">EXL</a>, 2015-%date%. \
 Telegram: <a href="//t.me/exlmoto" target="_blank" title="@exlmoto в Telegram.">@exlmoto</a>.
 site.header.logo.tooltip=Новости чата MotoFan.Ru, последняя страница.
-site.header.menu.site=Сайт
-site.header.menu.wiki=MotoWiki
-site.header.menu.search=Поиск
-site.header.menu.members=Пользователи
-site.header.menu.rules=Правила форума
-site.header.menu.rating=Рейтинг
-site.header.menu.store=Магазин
-site.header.menu.twitter=Twitter
-site.header.menu.telegram=Telegram
+site.header.menu=\
+&bull; <a href="//motofan.ru" target="_blank">Сайт</a> \
+&bull; <a href="//wiki.motofan.ru" target="_blank">MotoWiki</a> \
+&bull; <a href="//forum.motofan.ru/index.php?act=Search&amp;f=" target="_blank">Поиск</a> \
+&bull; <a href="//forum.motofan.ru/index.php?act=Members" target="_blank">Пользователи</a> \
+&bull; <a href='//forum.motofan.ru/index.php?act=announce&amp;f=70&amp;id=17' target="_blank">Правила форума</a> \
+&bull; <a href="//forum.motofan.ru/index.php?act=rating&amp;CODE=show" target="_blank" >Рейтинг</a> \
+&bull; <a href="//forum.motofan.ru/index.php?showforum=12" target="_blank">Магазин</a> \
+&bull; <a href="//twitter.com/MotoFanRu" target="_blank">Twitter</a> \
+&bull; <a class="telegram-link" href="//t.me/motofan_ru" target="_blank">Telegram</a> \
+&bull;
 site.pager.pages=Страниц:
 site.pager.page=Страница
 site.pager.right=>
