Fix pager markup

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -204,7 +204,8 @@ site.pager.pages=Страниц:
 site.pager.page=Страница
 site.pager.right=>
 site.pager.left=<
-site.pager.right.last=>>
-site.pager.left.first=<<
+site.pager.right.last=»
+site.pager.left.first=«
 site.pager.ok=OK
 site.pager.placeholder=№
+site.pager.goto=Перейти на страницу:
