--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -204,7 +204,8 @@ site.pager.pages=Pages:
 site.pager.page=Page
 site.pager.right=>
 site.pager.left=<
-site.pager.right.last=>>
-site.pager.left.first=<<
+site.pager.right.last=»
+site.pager.left.first=«
 site.pager.ok=OK
 site.pager.placeholder=#
+site.pager.goto=Go to page:
