Start to implement digest content page

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -209,3 +209,4 @@ site.pager.left.first=«
 site.pager.ok=OK
 site.pager.placeholder=№
 site.pager.goto=Перейти на страницу:
+site.content.title=Новости конференции MotoFan.Ru в Telegram, собранные сообщения с тегом <em>#digest</em>
