Implement digest model and other

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -209,4 +209,5 @@ site.pager.left.first=«
 site.pager.ok=OK
 site.pager.placeholder=#
 site.pager.goto=Go to page:
-site.content.title=News from MotoFan.Ru Telegram group, collected posts with <em>#digest</em> tag
+site.content.title.chat.id=Chat ID: %id%
+site.content.title.motofan=News from MotoFan.Ru Telegram group, collected posts with <em>#digest</em> tag
