--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -209,4 +209,5 @@ site.pager.left.first=«
 site.pager.ok=OK
 site.pager.placeholder=№
 site.pager.goto=Перейти на страницу:
-site.content.title=Новости конференции MotoFan.Ru в Telegram, собранные сообщения с тегом <em>#digest</em>
+site.content.title.chat.id=Номер чата: %id%
+site.content.title.motofan=Новости конференции MotoFan.Ru в Telegram, собранные сообщения с тегом <em>#digest</em>
