Fix table header

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -209,5 +209,6 @@ site.pager.left.first=«
 site.pager.ok=OK
 site.pager.placeholder=#
 site.pager.goto=Go to page:
-site.content.title.chat.id=Chat ID: %id%
-site.content.title.motofan=News from MotoFan.Ru Telegram group, collected posts with <em>#digest</em> tag
+site.content.head.title=News from MotoFan.Ru Telegram group, collected posts with <em>#digest</em> tag
+site.content.head.description=\
+Chat ID: %d, <a href="%s" title="MotoFan.Ru chat in Telegram." target="_blank">%s</a>
