--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -209,5 +209,6 @@ site.pager.left.first=«
 site.pager.ok=OK
 site.pager.placeholder=№
 site.pager.goto=Перейти на страницу:
-site.content.title.chat.id=Номер чата: %id%
-site.content.title.motofan=Новости конференции MotoFan.Ru в Telegram, собранные сообщения с тегом <em>#digest</em>
+site.content.head.title=Новости конференции MotoFan.Ru в Telegram, собранные сообщения с тегом <em>#digest</em>
+site.content.head.description=\
+Номер чата: %d, <a href="%s" title="Чат MotoFan.Ru в Telegram." target="_blank">%s</a>
