Stylish table header

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -212,3 +212,4 @@ site.pager.goto=Go to page:
 site.content.head.title=News from MotoFan.Ru Telegram group, collected posts with <em>#digest</em> tag
 site.content.head.description=\
 Chat ID: %d, <a href="%s" title="MotoFan.Ru chat in Telegram." target="_blank">%s</a>
+site.content.head.icon.title=Go!
