--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -212,3 +212,4 @@ site.pager.goto=Перейти на страницу:
 site.content.head.title=Новости конференции MotoFan.Ru в Telegram, собранные сообщения с тегом <em>#digest</em>
 site.content.head.description=\
 Номер чата: %d, <a href="%s" title="Чат MotoFan.Ru в Telegram." target="_blank">%s</a>
+site.content.head.icon.title=Вперёд!
