Implement digest post render

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -213,3 +213,6 @@ site.content.head.title=News from MotoFan.Ru Telegram group, collected posts wit
 site.content.head.description=\
 Chat ID: %d, <a href="%s" title="MotoFan.Ru chat in Telegram." target="_blank">%s</a>
 site.content.head.icon.title=Go!
+site.content.empty=No matching records found in the database.
+site.content.avatar.general.alt=Not Available
+site.content.avatar.default.alt=Default Avatar
