--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -213,3 +213,6 @@ site.content.head.title=Новости конференции MotoFan.Ru в Tele
 site.content.head.description=\
 Номер чата: %d, <a href="%s" title="Чат MotoFan.Ru в Telegram." target="_blank">%s</a>
 site.content.head.icon.title=Вперёд!
+site.content.empty=Подходящие записи не найдены в базе данных.
+site.content.avatar.general.alt=Аватар недоступен
+site.content.avatar.default.alt=Стоковый аватар
