Fix some strings

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -214,5 +214,5 @@ site.content.head.description=\
 Chat ID: %d, <a href="%s" title="MotoFan.Ru chat in Telegram." target="_blank">%s</a>
 site.content.head.icon.title=Go!
 site.content.empty=No matching records found in the database.
-site.content.avatar.general.alt=Not Available
-site.content.avatar.default.alt=Default Avatar
+site.content.avatar.general.alt=Avatar
+site.content.avatar.default.alt=Default avatar
