--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -214,5 +214,5 @@ site.content.head.description=\
 Номер чата: %d, <a href="%s" title="Чат MotoFan.Ru в Telegram." target="_blank">%s</a>
 site.content.head.icon.title=Вперёд!
 site.content.empty=Подходящие записи не найдены в базе данных.
-site.content.avatar.general.alt=Аватар недоступен
+site.content.avatar.general.alt=Аватар
 site.content.avatar.default.alt=Стоковый аватар
