Add date/time and group filters

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -216,3 +216,9 @@ site.content.head.icon.title=Вперёд!
 site.content.empty=Подходящие записи не найдены в базе данных.
 site.content.avatar.general.alt=Аватар
 site.content.avatar.default.alt=Стоковый аватар
+site.content.group.guest=Группа: Гости
+site.content.group.user=Группа: Пользователи
+site.content.group.moderator=Группа: Модераторы
+site.content.group.administrator=Группа: Администраторы
+site.content.date.time=Дата: %s | Время: %s
+site.content.date.time.wrong=Неправильный формат даты и времени, проверьте разделитель-пробел.
