--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -216,3 +216,9 @@ site.content.head.icon.title=Go!
 site.content.empty=No matching records found in the database.
 site.content.avatar.general.alt=Avatar
 site.content.avatar.default.alt=Default avatar
+site.content.group.guest=Group: Guests
+site.content.group.user=Group: Users
+site.content.group.moderator=Group: Moderators
+site.content.group.administrator=Group: Administrators
+site.content.date.time=Date: %s | Time: %s
+site.content.date.time.wrong=Wrong date and time format, check that space divider.
