Add description filter

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -222,3 +222,4 @@ site.content.group.moderator=Группа: Модераторы
 site.content.group.administrator=Группа: Администраторы
 site.content.date.time=Дата: %s | Время: %s
 site.content.date.time.wrong=Неправильный формат даты и времени, проверьте разделитель-пробел.
+site.content.description=<a id="%3$d" href="%1$s" title="Сообщение №%2$d">Сообщение №%2$d</a>
