Implement search form

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -223,3 +223,8 @@ site.content.group.administrator=Group: Administrators
 site.content.date.time=Date: %s | Time: %s
 site.content.date.time.wrong=Wrong date and time format, check that space divider.
 site.content.description=<a id="%3$d" href="%1$s" title="Message #%2$d">Message #%2$d</a>
+site.search.find=Find!
+site.search.label=Search:
+site.search.placeholder=Search…
+site.search.user.label=User:
+site.search.user.placeholder=User ID…
