Fix search form markup

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -223,8 +223,8 @@ site.content.group.administrator=Группа: Администраторы
 site.content.date.time=Дата: %s | Время: %s
 site.content.date.time.wrong=Неправильный формат даты и времени, проверьте разделитель-пробел.
 site.content.description=<a id="%3$d" href="%1$s" title="Сообщение №%2$d">Сообщение №%2$d</a>
-site.search.find=Найти!
-site.search.label=Поиск:
-site.search.placeholder=Поиск…
-site.search.user.label=Пользователь:
-site.search.user.placeholder=Номер пользователя…
+site.search.button=Найти!
+site.search.find.label=Поиск:
+site.search.find.placeholder=Поиск…
+site.search.filter.label=Фильтр:
+site.search.filter.placeholder=Номер пользователя…
