--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -223,8 +223,10 @@ site.content.group.administrator=Group: Administrators
 site.content.date.time=Date: %s | Time: %s
 site.content.date.time.wrong=Wrong date and time format, check that space divider.
 site.content.description=<a id="%3$d" href="%1$s" title="Message #%2$d">Message #%2$d</a>
+site.content.user.id=User #: %id%
+site.content.user.digests=<a href="%s" title="Find all digests of this user.">Digests: %d</a>
 site.search.button=Find!
 site.search.find.label=Search:
-site.search.find.placeholder=Search…
+site.search.find.placeholder=Enter text…
 site.search.filter.label=Filter:
-site.search.filter.placeholder=User ID…
+site.search.filter.placeholder=User #…
