Add Reset button to search form

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -230,3 +230,4 @@ site.search.find.label=Search:
 site.search.find.placeholder=Enter text…
 site.search.filter.label=Filter:
 site.search.filter.placeholder=User #…
+site.search.reset=Reset
