--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -230,3 +230,4 @@ site.search.find.label=Поиск:
 site.search.find.placeholder=Введите текст…
 site.search.filter.label=Фильтр:
 site.search.filter.placeholder=Пользователь №…
+site.search.reset=Сброс
