Enable title generation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -210,6 +210,9 @@ site.pager.ok=OK
 site.pager.placeholder=#
 site.pager.goto=Go to page:
 site.content.head.title=News from MotoFan.Ru Telegram group, collected posts with <em>#digest</em> tag
+site.content.head.title.search=Search results, query: "<em>%s</em>"
+site.content.head.title.search.user=Search results, user: <em>%s</em>
+site.content.head.title.search.user.text=Search results, query: "<em>%s</em>", user: <em>%s</em>
 site.content.head.description=\
 Chat ID: %d, <a href="%s" title="MotoFan.Ru chat in Telegram." target="_blank">%s</a>
 site.content.head.icon.title=Go!
