--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -210,6 +210,9 @@ site.pager.ok=OK
 site.pager.placeholder=№
 site.pager.goto=Перейти на страницу:
 site.content.head.title=Новости конференции MotoFan.Ru в Telegram, собранные сообщения с тегом <em>#digest</em>
+site.content.head.title.search=Результаты поиска по запросу: "<em>%s</em>"
+site.content.head.title.search.user=Сообщения пользователя <em>%s</em>
+site.content.head.title.search.user.text=Результаты поиска по запросу: "<em>%s</em>", пользователь: <em>%s</em>
 site.content.head.description=\
 Номер чата: %d, <a href="%s" title="Чат MotoFan.Ru в Telegram." target="_blank">%s</a>
 site.content.head.icon.title=Вперёд!
