--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -206,6 +206,8 @@ site.pager.right=>
 site.pager.left=<
 site.pager.right.last=»
 site.pager.left.first=«
+site.pager.up=↑
+site.pager.down=↓
 site.pager.ok=OK
 site.pager.placeholder=№
 site.pager.goto=Перейти на страницу:
