Add link on post in the Telegram group

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -226,8 +226,10 @@ site.content.group.user=Group: Users
 site.content.group.moderator=Group: Moderators
 site.content.group.administrator=Group: Administrators
 site.content.date.time=Date: %s | Time: %s
-site.content.date.time.wrong=Wrong date and time format, check that space divider.
-site.content.description=<a id="%3$d" href="%1$s" title="Message #%2$d">Message #%2$d</a>
+site.content.date.time.wrong=Wrong date and time format, check space divider.
+site.content.description=<a id="%3$d" href="%1$s" title="Direct link to the message #%2$d.">Message #%2$d</a>
+site.content.chat.link=\
+<a href="%s" title="Read this message in the Telegram chat." target="_blank">Post in chat</a>&nbsp;|&nbsp;
 site.content.user.id=User #: %id%
 site.content.user.digests=<a href="%s" title="Find all digests of this user.">Digests: %d</a>
 site.search.button=Find!
