--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -227,7 +227,9 @@ site.content.group.moderator=Группа: Модераторы
 site.content.group.administrator=Группа: Администраторы
 site.content.date.time=Дата: %s | Время: %s
 site.content.date.time.wrong=Неправильный формат даты и времени, проверьте разделитель-пробел.
-site.content.description=<a id="%3$d" href="%1$s" title="Сообщение №%2$d">Сообщение №%2$d</a>
+site.content.description=<a id="%3$d" href="%1$s" title="Прямая ссылка на сообщение №%2$d.">Сообщение №%2$d</a>
+site.content.chat.link=\
+<a href="%s" title="Прочитать это сообщение в Telegram-чате." target="_blank">Пост в чате</a>&nbsp;|&nbsp;
 site.content.user.id=Пользователь №: %id%
 site.content.user.digests=<a href="%s" title="Найти все дайджесты этого пользователя.">Дайджестов: %d</a>
 site.search.button=Найти!
