Generate title/lang attributes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -183,6 +183,7 @@ bot.hashtag.digest.subscribe.link=Link to the message️
 bot.info.digest.stats=Total #digest count is %d, p. %d/%d:
 
 site.title=MotoFan.Ru news in Telegram group!
+site.title.search=Search | MotoFan.Ru news in Telegram group!
 site.footer.created=\
 Created with <a href="//t.me/Digest_bot" target="_blank" title="@Digest_bot in Telegram.">@Digest_bot</a> help.
 site.footer.copyright=\
