--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -183,6 +183,7 @@ bot.hashtag.digest.subscribe.link=Ссылка на сообщение
 bot.info.digest.stats=Всего #digest'ов: %d, стр. %d/%d:
 
 site.title=Новости MotoFan.Ru в конференции Telegram!
+site.title.search=Поиск | Новости MotoFan.Ru в конференции Telegram!
 site.footer.created=\
 Создано при помощи <a href="//t.me/Digest_bot" target="_blank" title="@Digest_bot в Telegram.">@Digest_bot</a>.
 site.footer.copyright=\
