--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -88,7 +88,7 @@ Have a nice day, %username%!\n\
 Hey. I'm a little broken here. Fix me with the next commit.\n\
 Wow. Long time no see. Hi!\n\
 I'm still here. Hi! :3\n\
-Hello, my brother. May I be of service this glorius day?\n\
+Hello, my brother. May I be of service this glorious day?\n\
 Hello to you, my developer!
 bot.command.help=\
 Gadget Hackwrench commands help:\n\
