--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -184,6 +184,10 @@ bot.info.digest.stats=Total #digest count is %d, p. %d/%d:
 
 site.title=MotoFan.Ru news in Telegram group!
 site.title.search=Search | MotoFan.Ru news in Telegram group!
+site.footer.language=\
+Language: \
+<a href="/language?tag=ru" title="Russian">Русский</a> | \
+<a href="/language?tag=en" title="English">English</a>.
 site.footer.created=\
 Created with <a href="//t.me/Digest_bot" target="_blank" title="@Digest_bot in Telegram.">@Digest_bot</a> help.
 site.footer.copyright=\
