--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -184,6 +184,10 @@ bot.info.digest.stats=Всего #digest'ов: %d, стр. %d/%d:
 
 site.title=Новости MotoFan.Ru в конференции Telegram!
 site.title.search=Поиск | Новости MotoFan.Ru в конференции Telegram!
+site.footer.language=\
+Язык сайта: \
+<a href="/language?tag=ru" title="Русский">Русский</a> | \
+<a href="/language?tag=en" title="Английский">English</a>.
 site.footer.created=\
 Создано при помощи <a href="//t.me/Digest_bot" target="_blank" title="@Digest_bot в Telegram.">@Digest_bot</a>.
 site.footer.copyright=\
