Implement /greeting command and keyboard

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -74,6 +74,8 @@ bot.inline.error.subscribe.exist=❌ Chat has already been subscribed.
 bot.inline.error.unsubscribe.exist=❌ Chat has already been unsubscribed.
 bot.inline.subscribe.subscribed=✅ Chat Subscribed.
 bot.inline.subscribe.unsubscribed=✅ Chat Unsubscribed.
+bot.inline.greeting.on=✅ Greetings in chat is enabled.
+bot.inline.greeting.off=✅ Greetings in chat is disabled.
 bot.inline.pager.page=You have selected a page:
 bot.pager.right=>
 bot.pager.left=<
@@ -168,6 +170,13 @@ Again, everyone forgot about the digest. Nothing here 😓
 bot.command.digest.marker=•
 bot.command.digest.marker.new=🆕
 bot.command.digest.link=➡️
+bot.command.greeting=\
+*Bot greetings in chat*\n\n\
+Status: %s.
+bot.command.greeting.status.on=✅ Enabled
+bot.command.greeting.status.off=❌ Disabled
+bot.command.greeting.button.on=Enable
+bot.command.greeting.button.off=Disable
 bot.hashtag.digest.ok=\
 I recorded it.\n\
 Recorded.\n\
