--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -74,6 +74,8 @@ bot.inline.error.subscribe.exist=❌ Чат уже подписан.
 bot.inline.error.unsubscribe.exist=❌ Чат уже отписан.
 bot.inline.subscribe.subscribed=✅ Подписка оформлена.
 bot.inline.subscribe.unsubscribed=✅ Подписка отменена.
+bot.inline.greeting.on=✅ Приветствия в группе включены.
+bot.inline.greeting.off=✅ Приветствия в группе выключены.
 bot.inline.pager.page=Вы выбрали страницу:
 bot.pager.right=>
 bot.pager.left=<
@@ -168,6 +170,13 @@ bot.command.digest.empty=\
 bot.command.digest.marker=•
 bot.command.digest.marker.new=🆕
 bot.command.digest.link=➡️
+bot.command.greeting=\
+*Приветствия бота в группе*\n\n\
+Статус: %s.
+bot.command.greeting.status.on=✅ Включены
+bot.command.greeting.status.off=❌ Выключены
+bot.command.greeting.button.on=Включить
+bot.command.greeting.button.off=Выключить
 bot.hashtag.digest.ok=\
 Записала.\n\
 Записано.\n\
