Add /greeting command to /help output

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -102,8 +102,10 @@ Gadget Hackwrench commands help:\n\
 /game — Show game servers statistic.\n\
 /subscribe — Subscribe to various channels.\n\
 /help — Show this help.
+bot.command.help.moder=\
+/greeting — Show chat greetings from bot.
 bot.command.help.admin=\
-/hello or /hi  — Get greeting from bot.\n\
+/hello or /hi — Get greeting from bot.\n\
 /show — Show digests list.\n\
 /delete <id> — Remove digest entry by <id> number.\n\
 /send <chat id> <message> — Send <message> into <chat id>.\n\
