--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -102,8 +102,10 @@ bot.command.help=\
 /game — Статистика игровых серверов.\n\
 /subscribe — Подписаться на различные каналы.\n\
 /help — Эта справка.
+bot.command.help.moder=\
+/greeting — Показывать приветствия от бота.
 bot.command.help.admin=\
-/hello или /hi  — Получить привет от бота.\n\
+/hello или /hi — Получить привет от бота.\n\
 /show — Показать список записей дайджеста.\n\
 /delete <id> — Удалить запись дайджеста под номером <id>.\n\
 /send <chat id> <message> — Отправить <message> в <chat id>.\n\
