Add stylized error page

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -195,6 +195,7 @@ bot.info.digest.stats=Всего #digest'ов: %d, стр. %d/%d:
 
 site.title=Новости MotoFan.Ru в конференции Telegram!
 site.title.search=Поиск | Новости MotoFan.Ru в конференции Telegram!
+site.title.error=Ошибка | Новости MotoFan.Ru в конференции Telegram!
 site.footer.language=\
 Язык сайта: \
 <a href="/language?tag=ru" title="Русский">Русский</a> | \
@@ -254,3 +255,7 @@ site.search.find.placeholder=Введите текст…
 site.search.filter.label=Фильтр:
 site.search.filter.placeholder=Пользователь №…
 site.search.reset=Сброс
+site.error.title=Ой, что-то пошло не так...
+site.error.timestamp=Временная метка:
+site.error.status=Статус:
+site.error.message=Сообщение:
