--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -195,6 +195,7 @@ bot.info.digest.stats=Total #digest count is %d, p. %d/%d:
 
 site.title=MotoFan.Ru news in Telegram group!
 site.title.search=Search | MotoFan.Ru news in Telegram group!
+site.title.error=Error | MotoFan.Ru news in Telegram group!
 site.footer.language=\
 Language: \
 <a href="/language?tag=ru" title="Russian">Русский</a> | \
@@ -254,3 +255,7 @@ site.search.find.placeholder=Enter text…
 site.search.filter.label=Filter:
 site.search.filter.placeholder=User #…
 site.search.reset=Reset
+site.error.title=Sorry, something went wrong...
+site.error.timestamp=Timestamp:
+site.error.status=Status:
+site.error.message=Message:
