Add some general fixes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -42,6 +42,7 @@ Wrong command format, please use:\n\
 `/image <chat id> <image url>`.
 bot.error.chatid=Wrong chat `id` number: `%s`.
 bot.error.database=Database error:\n```\n%s\n```
+bot.error.database.html=Database error:\n<pre>\n%s\n</pre>
 bot.error.show.empty=Error: There are no matching entries in the database.
 bot.error.delete.format=\
 Wrong command format, please use:\n\
