--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -42,6 +42,7 @@ bot.error.image.format=\
 `/image <chat id> <image url>`.
 bot.error.chatid=Неправильный номер `id` чата: `%s`.
 bot.error.database=Ошибка базы данных:\n```\n%s\n```
+bot.error.database.html=Ошибка базы данных:\n<pre>\n%s\n</pre>
 bot.error.show.empty=Ошибка: нет подходящих записей в базе данных.
 bot.error.delete.format=\
 Неправильный формат комманды, используйте:\n\
