--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -201,6 +201,9 @@ site.footer.language=\
 Language: \
 <a href="/language?tag=ru" title="Russian">Русский</a> | \
 <a href="/language?tag=en" title="English">English</a>.
+site.footer.render=Rendering time: %time%ms.
+site.footer.source=\
+Source code: <a href="//github.com/EXL/DigestService" target="_blank" title="Digest Service GitHub repository.">Digest Service</a>.
 site.footer.created=\
 Created with <a href="//t.me/Digest_bot" target="_blank" title="@Digest_bot in Telegram.">@Digest_bot</a> help.
 site.footer.copyright=\
