--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -201,6 +201,9 @@ site.footer.language=\
 Язык сайта: \
 <a href="/language?tag=ru" title="Русский">Русский</a> | \
 <a href="/language?tag=en" title="Английский">English</a>.
+site.footer.render=Время рендеринга: %time%ms.
+site.footer.source=\
+Исходный код: <a href="//github.com/EXL/DigestService" target="_blank" title="Репозиторий Digest Service на GitHub'е.">Digest Service</a>.
 site.footer.created=\
 Создано при помощи <a href="//t.me/Digest_bot" target="_blank" title="@Digest_bot в Telegram.">@Digest_bot</a>.
 site.footer.copyright=\
