Add some info report generator

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -199,11 +199,13 @@ site.title.search=Search | MotoFan.Ru news in Telegram group!
 site.title.error=Error | MotoFan.Ru news in Telegram group!
 site.footer.language=\
 Language: \
-<a href="/language?tag=ru" title="Russian">Русский</a> | \
-<a href="/language?tag=en" title="English">English</a>.
+<a href="/language?tag=ru" title="Russian.">Русский</a> | \
+<a href="/language?tag=en" title="English.">English</a>.
 site.footer.render=Rendering time: %time%ms.
+site.footer.report=<a href="/api/health" target="_blank" title="Health Report.">Report</a>.
 site.footer.source=\
-Source code: <a href="//github.com/EXL/DigestService" target="_blank" title="Digest Service GitHub repository.">Digest Service</a>.
+Source code: \
+<a href="//github.com/EXL/DigestService" target="_blank" title="Digest Service GitHub repository.">Digest Service</a>.
 site.footer.created=\
 Created with <a href="//t.me/Digest_bot" target="_blank" title="@Digest_bot in Telegram.">@Digest_bot</a> help.
 site.footer.copyright=\
