--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -199,11 +199,13 @@ site.title.search=Поиск | Новости MotoFan.Ru в конференци
 site.title.error=Ошибка | Новости MotoFan.Ru в конференции Telegram!
 site.footer.language=\
 Язык сайта: \
-<a href="/language?tag=ru" title="Русский">Русский</a> | \
-<a href="/language?tag=en" title="Английский">English</a>.
+<a href="/language?tag=ru" title="Русский.">Русский</a> | \
+<a href="/language?tag=en" title="Английский.">English</a>.
 site.footer.render=Время рендеринга: %time%ms.
+site.footer.report=<a href="/api/health" target="_blank" title="Отчёт о работоспособности.">Отчёт</a>.
 site.footer.source=\
-Исходный код: <a href="//github.com/EXL/DigestService" target="_blank" title="Репозиторий Digest Service на GitHub'е.">Digest Service</a>.
+Исходный код: \
+<a href="//github.com/EXL/DigestService" target="_blank" title="Репозиторий Digest Service на GitHub'е.">Digest Service</a>.
 site.footer.created=\
 Создано при помощи <a href="//t.me/Digest_bot" target="_blank" title="@Digest_bot в Telegram.">@Digest_bot</a>.
 site.footer.copyright=\
