Improve /hostip command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,7 +28,7 @@ bot.error.send.message=Cannot send message `%s` into `%d` chat, error:\n```\n%s\
 bot.error.send.sticker=Cannot send sticker `%s` into `%d` chat, error:\n```\n%s\n```
 bot.error.send.image=Cannot send image from url `%s` into `%d` chat, error:\n```\n%s\n```
 bot.error.access=Unfortunately, %username%, you are not allowed to use this command.
-bot.error.hostip=Error getting host IP address:\n```\n%s\n```
+bot.error.hostip=Unknown\n\nError getting host IP address:\n%s
 bot.error.game=Cannot get game statistics, error:\n```\n%s\n```
 bot.error.chart=Cannot get chart image, error:\n```\n%s\n```
 bot.error.sticker.format=\
@@ -114,7 +114,7 @@ bot.command.help.admin=\
 /image <chat id> <url> — Send photo into <chat id>.\n\
 /debug — Show debug commands.\n\
 /hostip — Host server IP address.
-bot.command.hostip=Come to me (via SSH). My IP address:\n```\n%s\n```
+bot.command.info=*System Information*\n\n```\n%s\n```
 bot.command.game=Game statistics:
 bot.command.charts=📈 Please select a chart 📉
 bot.command.subscribe=\
