--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -28,7 +28,7 @@ bot.error.send.message=Не могу отправить сообщение `%s` 
 bot.error.send.sticker=Не могу отправить стикер `%s` в чат `%d`, ошибка:\n```\n%s\n```
 bot.error.send.image=Не могу отправить изображение с адреса `%s` в чат `%d`, ошибка:\n```\n%s\n```
 bot.error.access=К сожалению, %username%, ты не имеешь права использовать эту команду.
-bot.error.hostip=Ошибка получения IP-адреса:\n```\n%s\n```
+bot.error.hostip=Неизвестный\n\nОшибка получения IP-адреса:\n%s
 bot.error.game=Не могу получить игровую статистику, ошибка:\n```\n%s\n```
 bot.error.chart=Не могу получить изображение графика, ошибка:\n```\n%s\n```
 bot.error.sticker.format=\
@@ -114,7 +114,7 @@ bot.command.help.admin=\
 /image <chat id> <image url> — Отправить фото в <chat id>.\n\
 /debug — Показать команды для отладки.\n\
 /hostip — IP-адрес хост-сервера.
-bot.command.hostip=Войди в меня (по SSH). Мой IP:\n```\n%s\n```
+bot.command.info=*Системная информация*\n\n```\n%s\n```
 bot.command.game=Игровая статистика:
 bot.command.charts=📈 Пожалуйста, выберите график 📉
 bot.command.subscribe=\
