Rename /hostip command to /info command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -113,7 +113,7 @@ bot.command.help.admin=\
 /sticker <chat id> <sticker id> — Send sticker into <chat id>.\n\
 /image <chat id> <url> — Send photo into <chat id>.\n\
 /debug — Show debug commands.\n\
-/hostip — Host server IP address.
+/info — Show system information.
 bot.command.info=*System Information*\n\n```\n%s\n```
 bot.command.game=Game statistics:
 bot.command.charts=📈 Please select a chart 📉
