--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -113,7 +113,7 @@ bot.command.help.admin=\
 /sticker <chat id> <sticker id> — Отправить стикер в <chat id>.\n\
 /image <chat id> <image url> — Отправить фото в <chat id>.\n\
 /debug — Показать команды для отладки.\n\
-/hostip — IP-адрес хост-сервера.
+/info — Показать системную информацию.
 bot.command.info=*Системная информация*\n\n```\n%s\n```
 bot.command.game=Игровая статистика:
 bot.command.charts=📈 Пожалуйста, выберите график 📉
