Add small fixes for system report and site footer

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -202,7 +202,8 @@ Language: \
 <a href="/language?tag=ru" title="Russian.">Русский</a> | \
 <a href="/language?tag=en" title="English.">English</a>.
 site.footer.render=Rendering time: %time%ms.
-site.footer.report=<a href="/api/health" target="_blank" title="Health Report.">Report</a>.
+site.footer.report=<a href="/api/info" target="_blank" title="System Information.">System Information</a>.
+site.footer.help=<a href="/help" target="_blank" title="Bot Commands Cheat Sheet.">Help</a>.
 site.footer.source=\
 Source code: \
 <a href="//github.com/EXL/DigestService" target="_blank" title="Digest Service GitHub repository.">Digest Service</a>.
