Add help template (page) skeleton

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -197,6 +197,7 @@ bot.info.digest.stats=Total #digest count is %d, p. %d/%d:
 site.title=MotoFan.Ru news in Telegram group!
 site.title.search=Search | MotoFan.Ru news in Telegram group!
 site.title.error=Error | MotoFan.Ru news in Telegram group!
+site.title.help=Help | MotoFan.Ru news in Telegram group!
 site.footer.language=\
 Language: \
 <a href="/language?tag=ru" title="Russian.">Русский</a> | \
@@ -266,3 +267,4 @@ site.error.title=Sorry, something went wrong...
 site.error.timestamp=Timestamp:
 site.error.status=Status:
 site.error.message=Message:
+site.help.content=Lorem ipsulum
