--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -197,6 +197,7 @@ bot.info.digest.stats=Всего #digest'ов: %d, стр. %d/%d:
 site.title=Новости MotoFan.Ru в конференции Telegram!
 site.title.search=Поиск | Новости MotoFan.Ru в конференции Telegram!
 site.title.error=Ошибка | Новости MotoFan.Ru в конференции Telegram!
+site.title.help=Помощь | Новости MotoFan.Ru в конференции Telegram!
 site.footer.language=\
 Язык сайта: \
 <a href="/language?tag=ru" title="Русский.">Русский</a> | \
@@ -266,3 +267,4 @@ site.error.title=Ой, что-то пошло не так...
 site.error.timestamp=Временная метка:
 site.error.status=Статус:
 site.error.message=Сообщение:
+site.help.content=Lorem ipsulum
