Rename footer string

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -202,8 +202,8 @@ site.footer.language=\
 Язык сайта: \
 <a href="/language?tag=ru" title="Русский.">Русский</a> | \
 <a href="/language?tag=en" title="Английский.">English</a>.
-site.footer.render=Время рендеринга: %time%ms.
-site.footer.report=<a href="/api/info" target="_blank" title="Системная информация.">Системная информация</a>.
+site.footer.render=Рендер: %time%ms.
+site.footer.report=<a href="/api/info" target="_blank" title="Информация об этой системе.">Системный отчёт</a>.
 site.footer.help=<a href="/help" target="_blank" title="Справка по командам бота.">Помощь</a>.
 site.footer.source=\
 Исходный код: \
