--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -202,8 +202,8 @@ site.footer.language=\
 Language: \
 <a href="/language?tag=ru" title="Russian.">Русский</a> | \
 <a href="/language?tag=en" title="English.">English</a>.
-site.footer.render=Rendering time: %time%ms.
-site.footer.report=<a href="/api/info" target="_blank" title="System Information.">System Information</a>.
+site.footer.render=Render: %time%ms.
+site.footer.report=<a href="/api/info" target="_blank" title="Information about this system.">System Report</a>.
 site.footer.help=<a href="/help" target="_blank" title="Bot Commands Cheat Sheet.">Help</a>.
 site.footer.source=\
 Source code: \
