Add API rate link to the site footer

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -203,8 +203,11 @@ Language: \
 <a href="/language?tag=ru" title="Russian.">Русский</a> | \
 <a href="/language?tag=en" title="English.">English</a>.
 site.footer.render=Render: %time%ms.
-site.footer.report=<a href="/api/info" target="_blank" title="Information about this system.">System Report</a>.
-site.footer.help=<a href="/help" target="_blank" title="Bot Commands Cheat Sheet.">Help</a>.
+site.footer.link=\
+Links: \
+<a href="/help" title="Digest Service and Bot Commands Cheat Sheet.">Help</a>, \
+<a href="/api/info" title="Information about this system.">System</a>, \
+<a href="/api/rate" title="Exchange rate values.">Rates</a>.
 site.footer.source=\
 Source code: \
 <a href="//github.com/EXL/DigestService" target="_blank" title="Digest Service GitHub repository.">Digest Service</a>.
