--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -203,8 +203,11 @@ site.footer.language=\
 <a href="/language?tag=ru" title="Русский.">Русский</a> | \
 <a href="/language?tag=en" title="Английский.">English</a>.
 site.footer.render=Рендер: %time%ms.
-site.footer.report=<a href="/api/info" target="_blank" title="Информация об этой системе.">Системный отчёт</a>.
-site.footer.help=<a href="/help" target="_blank" title="Справка по командам бота.">Помощь</a>.
+site.footer.link=\
+Ссылки: \
+<a href="/help" title="Справка по сервису и командам бота.">Помощь</a>, \
+<a href="/api/info" title="Информация об этой системе.">Система</a>, \
+<a href="/api/rate" title="Котировки валют и металлов.">Котировки</a>.
 site.footer.source=\
 Исходный код: \
 <a href="//github.com/EXL/DigestService" target="_blank" title="Репозиторий Digest Service на GitHub'е.">Digest Service</a>.
