Add User model and list of Users method
Drop help page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -198,6 +198,7 @@ site.title=MotoFan.Ru news in Telegram group!
 site.title.search=Search | MotoFan.Ru news in Telegram group!
 site.title.error=Error | MotoFan.Ru news in Telegram group!
 site.title.help=Help | MotoFan.Ru news in Telegram group!
+site.title.user=Users | MotoFan.Ru news in Telegram group!
 site.footer.language=\
 Language: \
 <a href="/language?tag=ru" title="Russian.">Русский</a> | \
@@ -271,3 +272,9 @@ site.error.timestamp=Timestamp:
 site.error.status=Status:
 site.error.message=Message:
 site.help.content=Lorem ipsulum
+site.user.title=List of users
+site.user.avatar=Avatar
+site.user.name=Name
+site.user.id=Number
+site.user.group=Group
+site.user.message=Messages
