--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -198,6 +198,7 @@ site.title=Новости MotoFan.Ru в конференции Telegram!
 site.title.search=Поиск | Новости MotoFan.Ru в конференции Telegram!
 site.title.error=Ошибка | Новости MotoFan.Ru в конференции Telegram!
 site.title.help=Помощь | Новости MotoFan.Ru в конференции Telegram!
+site.title.user=Пользователи | Новости MotoFan.Ru в конференции Telegram!
 site.footer.language=\
 Язык сайта: \
 <a href="/language?tag=ru" title="Русский.">Русский</a> | \
@@ -271,3 +272,9 @@ site.error.timestamp=Временная метка:
 site.error.status=Статус:
 site.error.message=Сообщение:
 site.help.content=Lorem ipsulum
+site.user.title=Список пользователей
+site.user.avatar=Аватар
+site.user.name=Имя
+site.user.id=Номер
+site.user.group=Группа
+site.user.message=Сообщения
