Add various sorting

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -278,3 +278,7 @@ site.user.name=Name
 site.user.id=Number
 site.user.group=Group
 site.user.message=Messages
+site.user.name.sort=Sort by name
+site.user.id.sort=Sort by number
+site.user.group.sort=Sort by group
+site.user.message.sort=Sort by message count
