--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -278,3 +278,7 @@ site.user.name=Имя
 site.user.id=Номер
 site.user.group=Группа
 site.user.message=Сообщения
+site.user.name.sort=Сортировка по имени
+site.user.id.sort=Сортировка по номеру
+site.user.group.sort=Сортировка по группе
+site.user.message.sort=Сортировка по количеству сообщений
