Finish work on users page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -245,7 +245,8 @@ site.content.head.title.search=Search results, query: "<em>%s</em>"
 site.content.head.title.search.user=Search results, user: <em>%s</em>
 site.content.head.title.search.user.text=Search results, query: "<em>%s</em>", user: <em>%s</em>
 site.content.head.description=\
-Chat ID: %d, <a href="%s" title="MotoFan.Ru chat in Telegram." target="_blank">%s</a>
+Chat ID: %d, <a href="%s" title="MotoFan.Ru chat in Telegram." target="_blank">%s</a>, \
+<a href="/users" title="Show a list of all users who added messages to the digest.">All users</a>
 site.content.head.icon.title=Go!
 site.content.empty=No matching records found in the database.
 site.content.avatar.general.alt=Avatar
@@ -273,12 +274,13 @@ site.error.status=Status:
 site.error.message=Message:
 site.help.content=Lorem ipsulum
 site.user.title=List of users
+site.user.description=<a href="/" title="Go to start page.">« Go to home</a>
 site.user.avatar=Avatar
 site.user.name=Name
 site.user.id=Number
 site.user.group=Group
 site.user.message=Messages
-site.user.name.sort=Sort by name
-site.user.id.sort=Sort by number
-site.user.group.sort=Sort by group
-site.user.message.sort=Sort by message count
+site.user.name.sort=Sort by name.
+site.user.id.sort=Sort by number.
+site.user.group.sort=Sort by group.
+site.user.message.sort=Sort by message count.
