--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -245,7 +245,8 @@ site.content.head.title.search=Результаты поиска по запро
 site.content.head.title.search.user=Сообщения пользователя <em>%s</em>
 site.content.head.title.search.user.text=Результаты поиска по запросу: "<em>%s</em>", пользователь: <em>%s</em>
 site.content.head.description=\
-Номер чата: %d, <a href="%s" title="Чат MotoFan.Ru в Telegram." target="_blank">%s</a>
+Номер чата: %d, <a href="%s" title="Чат MotoFan.Ru в Telegram." target="_blank">%s</a>, \
+<a href="/users" title="Посмотреть список всех пользователей, добавлявших сообщения в дайджест.">Все пользователи</a>
 site.content.head.icon.title=Вперёд!
 site.content.empty=Подходящие записи не найдены в базе данных.
 site.content.avatar.general.alt=Аватар
@@ -273,12 +274,13 @@ site.error.status=Статус:
 site.error.message=Сообщение:
 site.help.content=Lorem ipsulum
 site.user.title=Список пользователей
+site.user.description=<a href="/" title="Перейти на главную страницу.">« На главную</a>
 site.user.avatar=Аватар
 site.user.name=Имя
 site.user.id=Номер
 site.user.group=Группа
 site.user.message=Сообщения
-site.user.name.sort=Сортировка по имени
-site.user.id.sort=Сортировка по номеру
-site.user.group.sort=Сортировка по группе
-site.user.message.sort=Сортировка по количеству сообщений
+site.user.name.sort=Сортировка по имени.
+site.user.id.sort=Сортировка по номеру.
+site.user.group.sort=Сортировка по группе.
+site.user.message.sort=Сортировка по количеству сообщений.
