Return help page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -272,9 +272,10 @@ site.error.title=Sorry, something went wrong...
 site.error.timestamp=Timestamp:
 site.error.status=Status:
 site.error.message=Message:
+site.help.title=Digest Service and Telegram Bot Commands Cheat Sheet
 site.help.content=Lorem ipsulum
+site.goto.home=<a href="/" title="Go to the start page.">« Go to home</a>
 site.user.title=List of users
-site.user.description=<a href="/" title="Go to start page.">« Go to home</a>
 site.user.avatar=Avatar
 site.user.name=Name
 site.user.id=Number
