--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -272,9 +272,10 @@ site.error.title=Ой, что-то пошло не так...
 site.error.timestamp=Временная метка:
 site.error.status=Статус:
 site.error.message=Сообщение:
+site.help.title=Справка по сервису и командам Telegram-бота
 site.help.content=Lorem ipsulum
+site.goto.home=<a href="/" title="Перейти на главную страницу.">« На главную</a>
 site.user.title=Список пользователей
-site.user.description=<a href="/" title="Перейти на главную страницу.">« На главную</a>
 site.user.avatar=Аватар
 site.user.name=Имя
 site.user.id=Номер
