Add COVID-19 service

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -285,3 +285,7 @@ site.user.name.sort=Сортировка по имени.
 site.user.id.sort=Сортировка по номеру.
 site.user.group.sort=Сортировка по группе.
 site.user.message.sort=Сортировка по количеству сообщений.
+
+covid.error.names=Список имён регионов, заражённых COVID-19 пустой или null!
+covid.error.cases=Список случаев заражения COVID-19 пустой или null!
+covid.error.hists=История заражения COVID-19 пустая или null!
