--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -285,3 +285,7 @@ site.user.name.sort=Sort by name.
 site.user.id.sort=Sort by number.
 site.user.group.sort=Sort by group.
 site.user.message.sort=Sort by message count.
+
+covid.error.names=COVID-19 region names map is null or empty!
+covid.error.cases=COVID-19 cases map is null or empty!
+covid.error.hists=COVID-19 history map is null or empty!
